Refactor into a simple api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,18 @@
 [package]
-name = "moon"
+name = "evee"
 version = "0.1.0"
 authors = ["wayofthepie <wayofthepie@gmail.com>"]
 
 [dependencies]
-nats = "*"
+log = "0.3.8"
 rocket = "0.2.7"
 rocket_codegen = "0.2.7"
-lazy_static = "0.2.8"
-crossbeam = "0.2.10"
+rocket_contrib = "0.2.7"
+serde = "0.9"
+serde_derive = "0.9"
+serde_json = "0.9"
+spectral = "0.6.0"
+uuid = { version = "0.4", features = ["serde", "v4"] }
+
+[dev-dependencies]
+rocket = { version = "0.2.7", features = ["testing"] }
