--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ uuid = { version = "0.4", features = ["serde", "v4"] }
 
 [dev-dependencies]
 rocket = { version = "0.2.7", features = ["testing"] }
+stainless = "*"
